[metadata]
name = fastlz
version = 0.5.0
description = Python wrapper for FastLZ, a lightning-fast lossless compression library.
author = Valdemar M. T. Landberg
author_email = valdemar.landberg@live.dk
url = https://github.com/valdemarmtl/python-fastlz
license = BSD License,
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Topic :: System :: Archiving :: Compression
    Topic :: Utilities

[bdist_wheel]
universal = 1